# virtual_ecosystem

./: .gitignore  .markdownlint.yaml  .mdformat.toml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md  code_development_strategy.md  dependabot.yml  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: automerge.yml  check-links.yml  ci.yml  pre-commit_autoupdate.yml  publish.yml
data/: example_config.toml
docs/source/: _toc.yaml  bibliography.md  conf.py  index.md  refs.bib  variables.csv  variables.rst
docs/source/_ext/: autodoc_constants_registry.py
docs/source/_static/: vr_full_model_configuration.toml
docs/source/api/: abiotic.md  abiotic_simple.md  animals.md  core.md  example_data.md  hydrology.md  litter.md  main.md  models.md  soil.md
docs/source/command_line_tools/: vr_run.md
docs/source/data_recipes/: CDS_toolbox_template.md  ERA5_land.nc  ERA5_preprocessing_example.md  climate_data_recipes.md  create_dummy_elevation.md  data_recipes.md  dummy_climate_data.nc  litter_dummy.md  plant_dummy.md  runoff_dummy.md  soil_dummy.md
docs/source/development/: contributing.md  defining_new_models.md  design.md  developer_setup.md  documentation.md  jupyter_notebooks.md  package_releases.md
docs/source/using_the_ve/: example_data.md  getting_started.md  ve_run.md  virtual_ecosystem_in_use.md
docs/source/virtual_ecosystem/: abiotic_theory.md  constants.md  example_data.md  getting_started.md  hydrology_theory.md  implementation.md  main_simulation.md  microclimate_theory.md  module_overview.md  theory.md  usage.md  variables.md  virtual_ecosystem_in_use.md
docs/source/virtual_rainforest/: constants.md  example_data.md  main_simulation.md  module_overview.md  parameterisation.md  usage.md
dummy_data/: README.txt  dummy_total_config.toml  vr_run.toml
snakemake/: .gitignore  Snakefile
snakemake/pbs-icl/: config.yaml  pbs-submit.py
snakemake/workflow-profile/: config.yaml
source/: bibliography.md  conf.py  contents.rst  index.md  refs.bib
source/development/: code_development_strategy.md  developer_setup.md  jupyter_notebooks.md
source/development/design/: core.md
source/development/training/: development_toolchain.ipynb  doctest_and_pytest.ipynb  doctest_and_pytest_pre_session.md  git.ipynb  git_and_gitflow.ipynb  mfm.py  test_mfm.py
source/virtual_rainforest/: module_overview.md
source/virtual_rainforest/core/: grid.md
source/virtual_rainforest/soil/: soil_details.md
tests/: __init__.py  conftest.py  test_axes.py  test_carcass_module.py  test_cli_integration.py  test_config.py  test_data.py  test_data_loaders.py  test_data_validators.py  test_dummy_animal_module.py  test_entry_points.py  test_grid.py  test_main.py  test_models.py  test_radiation.py  test_readers.py  test_soil_carbon.py
tests/core/: conftest.py  test_axes.py  test_base_model.py  test_cli_integration.py  test_config.py  test_config_schema.py  test_constants.py  test_constants_class.py  test_constants_loader.py  test_core_components.py  test_data.py  test_grid.py  test_logger.py  test_model.py  test_readers.py  test_registry.py  test_schema.py  test_utility_functions.py  test_utils.py  test_variables.py
tests/core/data/: all_config.toml  all_config_bad.toml  already_exists.nc  bad_json_in_schema.json  bad_schema_in_schema.json  cellid_coords.nc  cellid_coords_bad_cellid.nc  cellid_coords_too_few.nc  cellid_dim_too_few.nc  cellid_dim_too_many.nc  cellid_dims.nc  default_config.toml  example_netcdf_generator.py  no_properties_in_schema.json  no_required_in_schema.json  test.toml  test_dupes.toml  test_no_data.toml  this_data_format.not_handled  toml_errors.toml  valid_schema.json  xy_coords.nc  xy_coords_shifted.nc  xy_coords_small.nc  xy_dim.nc  xy_dim_large.nc  xy_dim_small.nc
tests/core/test_module/: __init__.py  constants.py  module_schema.json  test_model.py
tests/data/test_data/: cellid_coords.nc  cellid_dims.nc  example_netcdf_generator.py  garbage.nc  test.toml  (+7 more)
tests/fixtures/: all_config.toml  default_config.toml  model_init_testing.toml
tests/test_config/: existing_complete.toml
tests/test_data/: cellid_coords_too_few.nc  cellid_dim_too_few.nc  cellid_dim_too_many.nc  example_netcdf_generator.py  one_dim_cellid.nc  one_dim_cellid_badid.nc  one_dim_cellid_lown.nc  one_dim_points.nc  one_dim_points_order_only.nc  one_dim_points_xy.nc  test.toml  two_dim_idx.nc  two_dim_idx_6by10.nc  two_dim_xy.nc  two_dim_xy_lowx.nc
virtual_ecosystem/: __init__.py  data_variables.toml  entry_points.py  main.py
virtual_ecosystem/core/: __init__.py  axes.py  base_model.py  config.py  constants.py  constants_class.py  constants_loader.py  core_components.py  data.py  exceptions.py  grid.py  logger.py  module_schema.json  readers.py  registry.py  schema.py  utils.py  variables.py  variables_schema.json
virtual_ecosystem/example_data/: __init__.py
virtual_ecosystem/models/: __init__.py
virtual_rainforest/: __init__.py  data_variables.toml  entry_points.py  main.py  version.py
virtual_rainforest/abiotic/: energy_balance.py  radiation.py
virtual_rainforest/animals/: dummy_animal_module.py
virtual_rainforest/core/: __init__.py  accessors.py  axes.py  base_model.py  config.py  constants.py  constants_class.py  constants_loader.py  core_components.py  core_schema.json  data.py  grid.py  logger.py  model.py  module_schema.json  readers.py  registry.py  schema.py  utility_functions.py  utils.py  variables.py  variables_alt.py
virtual_rainforest/example_data/: ERA5_land_dummy.nc  __init__.py  animal_functional_groups.toml  climate_dummy.py  create_dummy_elevation.py  dummy_litter_data.nc  dummy_soil_data.nc  dummy_total_config.toml  elevation_dummy.nc  litter_dummy.py  plant_dummy.py  plants_dummy.nc  runoff_dummy.py  soil_dummy.py  surface_runoff_dummy.nc  vr_run.toml
virtual_rainforest/plants/: __init__.py  plants_schema.json
virtual_rainforest/soil/: __init__.py  carbon.py  model.py  soil_schema.json
(+458 files in other folders)
