[tool.poetry]
name = "virtual_ecosystem"
version = "0.1.1a0"
description = """The package simulates the abiotic, soil, animal and plant components of an ecosystem."""
authors = [
    { name = "Rob Ewers", email = "r.ewers@imperial.ac.uk>" },
    { name = "David Orme", email = "d.orme@imperial.ac.uk>" },
    { name = "Jacob Cook", email = "j.cook17@imperial.ac.uk>" },
    { name = "Vivienne Groner", email = "v.groner@imperial.ac.uk>" },
    { name = "Taran Rallings", email = "t.rallings@imperial.ac.uk>" },
    { name = "Olivia Daniel", email = "olivia.daniel08@imperial.ac.uk>" },
]
readme = "README.md"
homepage = "https://virtual-ecosystem.readthedocs.io/"
repository = "https://github.com/ImperialCollegeLondon/virtual_ecosystem"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering",
]
licence = "BSD-3-Clause"


[tool.poetry.scripts]
ve_run = "virtual_ecosystem.entry_points:ve_run_cli"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.23.0"
tomli = { version = "^2.0.1", python = "<3.11" }
dpath = "^2.0.6"
tomli-w = "^1.0.0"
scipy = "^1.9.0"
jsonschema = "^4.14.0"
Shapely = "^1.8.4"
pint = "^0.20.1"
xarray = "^2024.02.0"
dask = "^2023.6.0"
netcdf4 = "^1.6.5"
tqdm = "^4.66.2"

[tool.poetry.group.types.dependencies]
types-jsonschema = "^4.16.1"
types-dataclasses = "^0.6.6"
types-tqdm = "^4.66.0.20240106"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-datadir = "^1.4.1"
pytest-flake8 = "^1.1.1"
pytest-mypy = "^0.10.3"
pytest-mock = "^3.8.1"
hypothesis = "^6.54.2"

[tool.poetry.group.devenv.dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
mypy = "^1.5.1"
pre-commit = "^2.19.0"
isort = "^5.12.0"
mdformat = "^0.7.14"
mdformat_frontmatter = "^0.4.1"
mdformat_tables = "^0.4.1"
flake8-docstrings = "^1.6.0"
ipython = "^8.4.0"
ipykernel = "^6.15.0"
matplotlib = "^3.5.2"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.0"
sphinxcontrib-bibtex = "^2.4.2"
myst-nb = "^1.0.0"
sphinx-rtd-theme = "^1.0.0"
autodocsumm = "^0.2.8"
pydocstyle = "^6.1.1"
sphinxcontrib-mermaid = "^0.9.2"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
