[tool.poetry]
authors = [
  "Rob Ewers <r.ewers@imperial.ac.uk>",
  "David Orme <d.orme@imperial.ac.uk>",
  "Jacob Cook <j.cook17@imperial.ac.uk>",
  "Vivienne Groner <v.groner@imperial.ac.uk>",
  "Taran Rallings <t.rallings@imperial.ac.uk>",
  "Olivia Daniel <olivia.daniel08@imperial.ac.uk>",
  "Jaideep Joshi <joshi@iiasa.ac.at>",
  "Anna Rallings <a.rallings@imperial.ac.uk>",
  "Priyanga Amarasekare <pamarasekare@gmail.com>",
  "Diego Alonso Alvarez <d.alonso-alvarez@imperial.ac.uk>",
  "Alex Dewar <a.dewar@imperial.ac.uk>",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Topic :: Scientific/Engineering",
]
description = """An holistic ecosystem simulation model."""
homepage = "https://virtual-ecosystem.readthedocs.io/"
license = "BSD-3-Clause"
name = "virtual_ecosystem"
readme = "README.md"
repository = "https://github.com/ImperialCollegeLondon/virtual_ecosystem"
version = "0.1.1a6"

[tool.poetry.scripts]
ve_run = "virtual_ecosystem.entry_points:ve_run_cli"

[tool.poetry.dependencies]
Shapely = "^1.8.4"
dask = "^2023.6.0"
dpath = "^2.0.6"
jsonschema = "^4.14.0"
netcdf4 = "^1.6.5"
numpy = "^1.23.0"
pint = "^0.20.1"
python = ">=3.10,<3.12"
scipy = "^1.9.0"
tomli = {version = "^2.0.1", python = "<3.11"}
tomli-w = "^1.0.0"
tqdm = "^4.66.2"
xarray = "^2024.02.0"

[tool.poetry.group.types.dependencies]
types-dataclasses = "^0.6.6"
types-jsonschema = "^4.16.1"
types-tqdm = "^4.66.0.20240106"

[tool.poetry.group.test.dependencies]
hypothesis = "^6.54.2"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-datadir = "^1.4.1"
pytest-flake8 = "^1.1.1"
pytest-mock = "^3.8.1"
pytest-mypy = "^0.10.3"

[tool.poetry.group.devenv.dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
ipykernel = "^6.15.0"
ipython = "^8.4.0"
isort = "^5.12.0"
matplotlib = "^3.5.2"
mdformat = "^0.7.14"
mdformat_frontmatter = "^0.4.1"
mdformat_tables = "^0.4.1"
mypy = "^1.5.1"
pre-commit = "^2.19.0"

[tool.poetry.group.docs.dependencies]
autodocsumm = "^0.2.8"
myst-nb = "^1.0.0"
pydocstyle = "^6.1.1"
sphinx = "^7.0.0"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-bibtex = "^2.4.2"
sphinxcontrib-mermaid = "^0.9.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.2.0"]
